# MCP_servers

./: README.md  day_ratings.json  journal.db  journal_server.py  main.py  pyproject.toml
local_journaling_mcp_server/: README.md  day_ratings.json  main.py  moods.json
remote_journaling_mcp_server/: expenses.db  journal.db  journal.py  moods.json
